# israeli-supermarket-parsers

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.parse  README.md  docker-compose.yml  example.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  stores_lookup.ipynb  stress_test.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  pylint.yml  test-suite.yml  user-validation.yml
examples/: transform_example.py
il_supermarket_parsers/: __init__.py  batch_unified_converter.py  convert.py  main.py  multiprocess_pharser.py  parser_factory.py  parser_factroy.py  raw_parsing_pipeline.py  task.py  unified_converter.py
il_supermarket_parsers/conf/: processing.json
il_supermarket_parsers/config/: price_full_file_mapping.json  promo_full_file_mapping.json  store_file_mapping.json  uniform_schema.json
il_supermarket_parsers/documents/: __init__.py  base.py  conditional_xml_dataframe_parser.py  xml_dataframe_parser.py  xml_dataframe_subroot_praser.py
il_supermarket_parsers/engines/: __init__.py  base.py  big_id.py  branches.py
kniot_parser/: batch_unified_converter.py  convert.py  main.py  multiprocess_pharser.py  parser_factroy.py  unified_converter.py
notebooks/: price_full_regression.ipynb  prices.ipynb  prices_0_full.ipynb  prices_1_full_to_unique_itemcode.ipynb  prices_2_full_to_itemcode_across_stores.ipynb  promo_full_0_dtypes.ipynb  promo_full_0_old.ipynb  promo_full_1.ipynb  promo_full_2.ipynb  schema.py  stores_0_lookup.ipynb  stores_lookup.ipynb
tests/: test_shufersal_schemas.py
(+92 files in other folders)
