[tool.poetry]
name = "israeli-supermarket-parsers"
version = "0.1.0"
description = ""
authors = ["Sefi Erlich <erlichsefi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
xmltodict = "^0.13.0"
pandas = "^2.0.0"
python-dateutil = "^2.8.2"
pandas-stubs = "^2.2.3.241126"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
