[tool.poetry]
name = "il-supermarket-parsers"
version = "0.1.0"
description = "Israeli supermarket data parsers and schema standardization"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "il_supermarket_parsers" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
il-supermarket-scraper = "^0.5.6"
mypy = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
